Table anime {
	id integer [pk, not null]
	name varchar(50) [not null]
	original_name varchar(50) [not null]
	first_air_date varchar(30) 
	last_air_date varchar(30) 
	next_episode_to_air varchar(30) 
	season_to_air integer 
	episode_to_air integer 
	homepage varchar(200) 
	in_production boolean 
	created_by varchar(100) 
	duration integer 
	total_seasons integer [not null]
	total_episodes integer 
	origin_country varchar(20) 
	status varchar(50) 
	vote_average float 
	vote_count float 
	synopsis text 
	popularity float 
	image_cover varchar(100) [not null]
	api_id integer [not null]
	last_api_update datetime 
	lock_status boolean 
}

Table books {
	id integer [pk, not null]
	name varchar(50) [not null]
	release_date varchar(30) [not null]
	pages integer [not null]
	language varchar(20) [not null]
	publishers varchar(50) 
	synopsis text 
	image_cover varchar(100) [not null]
	api_id integer 
	lock_status boolean 
}

Table frames {
	id integer [pk, not null]
	level integer [not null]
	image_id varchar(50) [not null]
}

Table games {
	id integer [pk, not null]
	name varchar(50) [not null]
	image_cover varchar(100) [not null]
	collection_name varchar(50) 
	game_engine varchar(50) 
	game_modes varchar(200) 
	player_perspective varchar(50) 
	vote_average float 
	vote_count float 
	release_date varchar(30) 
	storyline text 
	synopsis text 
	IGDB_url varchar(200) 
	hltb_main_time varchar(20) 
	hltb_main_and_extra_time varchar(20) 
	hltb_total_complete_time varchar(20) 
	api_id integer [not null]
	lock_status boolean 
	last_api_update datetime 
}

Table movies {
	id integer [pk, not null]
	name varchar(50) [not null]
	original_name varchar(50) [not null]
	director_name varchar(100) 
	release_date varchar(30) 
	homepage varchar(200) 
	released varchar(30) 
	duration integer 
	original_language varchar(20) 
	synopsis text 
	vote_average float 
	vote_count float 
	popularity float 
	budget float 
	revenue float 
	tagline varchar(30) 
	image_cover varchar(100) [not null]
	api_id integer [not null]
	lock_status boolean 
	last_api_update datetime 
}

Table my_lists_stats {
	id integer [pk, not null]
	nb_users integer 
	nb_media text 
	total_time text 
	top_media text 
	top_genres text 
	top_actors text 
	top_authors text 
	top_directors text 
	top_developers text 
	top_dropped text 
	top_rated_actors text 
	top_rated_directors text 
	top_rated_developers text 
	total_episodes text 
	total_seasons text 
	total_movies text 
	total_pages integer 
	timestamp datetime 
}

Table ranks {
	id integer [pk, not null]
	level integer [not null]
	image_id varchar(50) [not null]
	name varchar(50) [not null]
	type varchar(50) 
}

Table series {
	id integer [pk, not null]
	name varchar(50) [not null]
	original_name varchar(50) [not null]
	first_air_date varchar(30) 
	last_air_date varchar(30) 
	next_episode_to_air varchar(30) 
	season_to_air integer 
	episode_to_air integer 
	homepage varchar(200) 
	in_production boolean 
	created_by varchar(100) 
	duration integer 
	total_seasons integer [not null]
	total_episodes integer 
	origin_country varchar(20) 
	status varchar(50) 
	vote_average float 
	vote_count float 
	synopsis text 
	popularity float 
	image_cover varchar(100) [not null]
	api_id integer [not null]
	last_api_update datetime 
	lock_status boolean 
}

Table user {
	id integer [pk, not null]
	username varchar(15) [unique, not null]
	email varchar(120) [unique, not null]
	registered_on datetime [not null]
	password varchar(60) 
	image_file varchar(20) [not null]
	background_image varchar(50) [not null]
	private boolean [not null]
	active boolean [not null]
	role varchar(7) [not null]
	transition_email varchar(120) 
	activated_on datetime 
	last_notif_read_time datetime 
	last_seen datetime 
	show_update_modal boolean 
	time_spent_series integer [not null]
	time_spent_anime integer [not null]
	time_spent_movies integer [not null]
	time_spent_games integer [not null]
	time_spent_books integer [not null]
	profile_views integer [not null]
	series_views integer [not null]
	anime_views integer [not null]
	movies_views integer [not null]
	games_views integer [not null]
	books_views integer [not null]
	add_anime boolean [not null]
	add_books boolean [not null]
	add_games boolean [not null]
	add_feeling boolean [not null]
}

Table anime_actors {
	id integer [pk, not null]
	media_id integer [not null, ref: > anime.id]
	name varchar(150) 
}

Table anime_episodes_per_season {
	id integer [pk, not null]
	media_id integer [not null, ref: > anime.id]
	season integer [not null]
	episodes integer [not null]
}

Table anime_genre {
	id integer [pk, not null]
	media_id integer [not null, ref: > anime.id]
	genre varchar(100) [not null]
	genre_id integer [not null]
}

Table anime_labels {
	media_id integer [not null, ref: > anime.id]
	id integer [pk, not null]
	user_id integer [not null, ref: > user.id]
	label varchar(64) [not null]
}

Table anime_list {
	media_id integer [not null, ref: > anime.id]
	id integer [pk, not null]
	user_id integer [not null, ref: > user.id]
	current_season integer [not null]
	last_episode_watched integer [not null]
	status varchar(13) [not null]
	rewatched integer [not null]
	favorite boolean 
	feeling varchar(30) 
	score float 
	total integer 
	comment text 
}

Table anime_network {
	id integer [pk, not null]
	media_id integer [not null, ref: > anime.id]
	network varchar(150) [not null]
}

Table books_authors {
	id integer [pk, not null]
	media_id integer [not null, ref: > books.id]
	name varchar(150) 
}

Table books_genre {
	id integer [pk, not null]
	media_id integer [not null, ref: > books.id]
	genre varchar(100) [not null]
}

Table books_labels {
	id integer [pk, not null]
	user_id integer [not null, ref: > user.id]
	media_id integer [not null, ref: > books.id]
	label varchar(64) [not null]
}

Table books_list {
	id integer [pk, not null]
	user_id integer [not null, ref: > user.id]
	media_id integer [not null, ref: > books.id]
	status varchar(13) [not null]
	rewatched integer [not null]
	actual_page integer 
	total integer 
	favorite boolean 
	feeling varchar(30) 
	score float 
	comment text 
}

Table followers {
	follower_id integer [ref: > user.id]
	followed_id integer [ref: > user.id]
}

Table games_companies {
	id integer [pk, not null]
	media_id integer [not null, ref: > games.id]
	name varchar(100) 
	publisher boolean 
	developer boolean 
}

Table games_genre {
	id integer [pk, not null]
	media_id integer [not null, ref: > games.id]
	genre varchar(100) [not null]
}

Table games_labels {
	id integer [pk, not null]
	user_id integer [not null, ref: > user.id]
	media_id integer [not null, ref: > games.id]
	label varchar(64) [not null]
}

Table games_list {
	id integer [pk, not null]
	user_id integer [not null, ref: > user.id]
	media_id integer [not null, ref: > games.id]
	status varchar(13) [not null]
	playtime integer 
	favorite boolean 
	feeling varchar(30) 
	score float 
	comment text 
}

Table games_platforms {
	id integer [pk, not null]
	media_id integer [not null, ref: > games.id]
	name varchar(150) 
}

Table movies_actors {
	id integer [pk, not null]
	media_id integer [not null, ref: > movies.id]
	name varchar(150) 
}

Table movies_genre {
	id integer [pk, not null]
	media_id integer [not null, ref: > movies.id]
	genre varchar(100) [not null]
	genre_id integer [not null]
}

Table movies_labels {
	id integer [pk, not null]
	user_id integer [not null, ref: > user.id]
	media_id integer [not null, ref: > movies.id]
	label varchar(64) [not null]
}

Table movies_list {
	id integer [pk, not null]
	user_id integer [not null, ref: > user.id]
	media_id integer [not null, ref: > movies.id]
	status varchar(13) [not null]
	rewatched integer [not null]
	total integer 
	favorite boolean 
	feeling varchar(50) 
	score float 
	comment text 
}

Table notifications {
	id integer [pk, not null]
	user_id integer [ref: > user.id]
	media_type varchar(50) 
	media_id integer 
	payload_json text 
	timestamp datetime 

	Indexes {
		timestamp
	}
}

Table series_actors {
	id integer [pk, not null]
	media_id integer [not null, ref: > series.id]
	name varchar(150) 
}

Table series_episodes_per_season {
	id integer [pk, not null]
	media_id integer [not null, ref: > series.id]
	season integer [not null]
	episodes integer [not null]
}

Table series_genre {
	id integer [pk, not null]
	media_id integer [not null, ref: > series.id]
	genre varchar(100) [not null]
	genre_id integer [not null]
}

Table series_labels {
	media_id integer [not null, ref: > series.id]
	id integer [pk, not null]
	user_id integer [not null, ref: > user.id]
	label varchar(64) [not null]
}

Table series_list {
	media_id integer [not null, ref: > series.id]
	id integer [pk, not null]
	user_id integer [not null, ref: > user.id]
	current_season integer [not null]
	last_episode_watched integer [not null]
	status varchar(13) [not null]
	rewatched integer [not null]
	favorite boolean 
	feeling varchar(30) 
	score float 
	total integer 
	comment text 
}

Table series_network {
	id integer [pk, not null]
	media_id integer [not null, ref: > series.id]
	network varchar(150) [not null]
}

Table token {
	id integer [pk, not null]
	user_id integer [ref: > user.id]
	access_token varchar(64) [not null]
	access_expiration datetime [not null]
	refresh_token varchar(64) [not null]
	refresh_expiration datetime [not null]
	admin_token varchar(64) 
	admin_expiration datetime 

	Indexes {
		access_token
		refresh_token
		user_id
	}
}

Table user_last_update {
	id integer [pk, not null]
	user_id integer [not null, ref: > user.id]
	media_name varchar(50) [not null]
	media_type varchar(6) [not null]
	date datetime [not null]
	media_id integer 
	old_status varchar(13) 
	new_status varchar(13) 
	old_season integer 
	new_season integer 
	old_episode integer 
	new_episode integer 
	old_playtime integer 
	new_playtime integer 
	old_page integer 
	new_page integer 
	old_redo integer 
	new_redo integer 

	Indexes {
		date
		media_type
		user_id
	}
}
